# ACC5-IKEA

test-acc5-computer-vision-project-2/: LLM.py  LLM_judge.py  eval_quantitatative.py  ground_truth_SpaceMantis-8B.csv  ground_truth_SpaceMantis-8B_2.csv  ground_truth_gen.ipynb  ground_truth_gen.py  llm_judge_example.ipynb  modelAsker_example.ipynb  modelAsker_sample_questions.csv  model_asker.py  partition_6_9.csv  pipeline.py  pyproject.toml  question_generation.py  requirements.txt  test_vlm_output.csv  vlm_answers_gen.py  vlm_nb.ipynb
test-acc5-computer-vision-project-2/cache/models--ICTNLP--llava-mini-llama-3.1-8b/refs/: main
test-acc5-computer-vision-project-2/cache/models--deepseek-ai--Janus-Pro-7B/refs/: main
test-acc5-computer-vision-project-2/intermediate_output_files/: mock_generated_questions.csv  mock_generated_truth_descriptions.csv  mock_generated_truth_responses.csv  quantities_from_responses.csv  stats_mock_model.txt
test-acc5-computer-vision-project-2/intermediate_output_files/mock/generated_answers_open_source/: all.csv
test-acc5-computer-vision-project-2/intermediate_output_files/mock/generated_quantities/: partition_4_6.csv
test-acc5-computer-vision-project-2/intermediate_output_files/mock/generated_questions/: all.csv  partition_3_6.csv
test-acc5-computer-vision-project-2/models/janus/: janus_utils.py
test-acc5-computer-vision-project-2/output_files/mock/: ground_truth_SpaceMantis-8B.csv
test-acc5-computer-vision-project-2/output_files/mock/generated_quantities/: partition_0_2.csv  partition_2_4.csv  partition_6_8.csv  (+1 more)
(+95 files in other folders)
