[project]
name = "cv-project-venv"
version = "0.1.0"
description = "Project for computer vision accelerator program. Spatial reasoning of VLMs"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "vertexai (>=1.71.1,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
